# python_binding_examples

./: .gitignore
boostpython/: CMakeLists.txt  pose_module.cpp
litgen/: CMakeLists.txt  example_usage.py  gen_bindings.py  geometry2d.cpp  line.hpp  pose.hpp  pose_module.cpp  requirements.txt
pybind11/: CMakeLists.txt  pose_module.cpp  test_buffer_protocol.py
